# SwipperBackup/Models/User..cs
@@ -11,15 +11,13 @@
         public string Address { get; set; }
         public string LivingSpace { get; set; }
         public string Description { get; set; }
-
-        //TODO: make optional
         public string CompanyName { get; set; }
         public bool HasPet { get; set; }
         public bool HasGarden { get; set; }
         public string LikedAnimals { get; set; }
         public string OwnAnimals { get; set; }
 
-        public User(int id, string username, string firstname, string lastname, string password, string email, string address, string livingSpace, string description, string companyName, bool hasPet, bool hasGarden, string likedAnimals, string ownAnimals)
+        public User(int id, string username, string firstname, string lastname, string password, string email, string address, string livingSpace, string description, bool hasPet, bool hasGarden, string likedAnimals, string ownAnimals, string companyName = null)
         {
             Id = id;
             Username = username;
